chat and filters fix

--- a/chat/templates/chat/chat-js.html
+++ b/chat/templates/chat/chat-js.html
@@ -166,7 +166,7 @@
                                                         ${data['body'] ? 
                                                             `
                                                             <div class="message-text">
-                                                                <p style="overflow-wrap:anywhere;">${urlify(data['body'])}</p>
+                                                                <p style="overflow-wrap:anywhere;">${data['body']}</p>
                                                             </div>
                                                             ` :
                                                             `
@@ -234,7 +234,7 @@
                                                     ${data['body'] ? 
                                                         `
                                                         <div class="message-text">
-                                                            <p style="overflow-wrap:anywhere;">${urlify(data['body'])}</p>
+                                                            <p style="overflow-wrap:anywhere;">${data['body']}</p>
                                                         </div>
                                                         ` :
                                                         `
@@ -338,7 +338,7 @@ function setReceiver(username,email, id, user_img_url=null,img_url=null, full_na
 
         $('#receiver_img_preview_id').prop("src",img_url);
         $('#sender_img_preview_id').prop("src",user_img_url);
-        $('#chatPanel-username').text(full_name);
+        $('#chatPanel-username').text(username);
 
 
 
@@ -355,14 +355,10 @@ function setReceiver(username,email, id, user_img_url=null,img_url=null, full_na
         $('#offcanvas_profile_img_url').prop("src", user_img_url);
         $('#offcanvas_profile_fullname').text(full_name);
         $('#offcanvas_profile_username').text(username);
-        // $('#offcanvas-tab-profile-people').text('Profile')
+        $('#offcanvas-tab-profile-people').text('Profile') 
         
         $('#offcanvas_profile_designation').text(designation).closest('.list-group-item').show();
         $('#offcanvas_profile_bio').text(bio).closest('.list-group-item').show();
-        if (!designation)
-            $('#offcanvas_profile_designation').closest('.list-group-item').hide()
-        if (!bio)
-            $('#offcanvas_profile_bio').closest('.list-group-item').hide();
         $('#offcanvas-dropdown').hide()
         $('#offcanvas_group_members').hide();
 
@@ -436,7 +432,7 @@ function getMessageById(data) {
                                                     ${data['body'] ? 
                                                         `
                                                         <div class="message-text">
-                                                            <p style="overflow-wrap:anywhere;">${urlify(data['body'])}</p>
+                                                            <p style="overflow-wrap:anywhere;">${data['body']}</p>
                                                         </div>
                                                         ` :
                                                         `
@@ -500,7 +496,7 @@ function getMessageById(data) {
                                                     ${data['body'] ? 
                                                         `
                                                         <div class="message-text">
-                                                            <p style="overflow-wrap:anywhere;">${urlify(data['body'])}</p>
+                                                            <p style="overflow-wrap:anywhere;">${data['body']}</p>
                                                         </div>
                                                         ` :
                                                         `
@@ -547,7 +543,13 @@ function getMessageById(data) {
     {% for item in chat_list_user %}
         let chatSocket_chat_{{ item.id }};
         let receiver_{{ item.id }} = "{{ item.id }}";
-        chatSocket_chat_{{ item.id }} = new ReconnectingWebSocket('ws://' + window.location.host +
+        let loc = window.location;
+    let wsStart = 'ws://';
+
+    if(loc.protocol === 'https:'){
+        wsStart = 'wss://';
+    }
+        chatSocket_chat_{{ item.id }} = new ReconnectingWebSocket(wsStart + window.location.host +
         '/ws/chat/p/'+sender+"/"+receiver_{{ item.id }}+"/");
 
         websocket_dict["chatSocket_chat_{{ item.id }}"] = chatSocket_chat_{{ item.id }};
@@ -906,14 +908,6 @@ function getMessageById(data) {
                     location.reload()
                 }
             })
-        }
-        // process body for links
-        function urlify(msg){
-            const regex = RegExp(/(https?:\/\/[^\s]+)/)
-            const processedMsg = msg.replace(regex, function(url) {
-                return `<a href="${url}" target="_blank" style="color: inherit; text-decoration:underline; overflow-wrap: anywhere;">${url}</a>`;
-            })
-            return processedMsg;
         }
 </script>
 {###########################    End of Script For P2p Chat Socket   ##################}
