--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -31,7 +31,7 @@
         $('#offcanvas_profile_fullname').text(groupName);
         $('#offcanvas_profile_username').text(groupInfo);
         $('#update_group_id').val(groupId);
-        // $('#offcanvas-tab-profile-people').text('People');
+        $('#offcanvas-tab-profile-people').text('People');
 
         $('#offcanvas_profile_designation').closest('.list-group-item').hide();
         $('#offcanvas_profile_bio').closest('.list-group-item').hide();
@@ -306,7 +306,7 @@
                                                     ${data['body'] ? 
                                                             `
                                                             <div class="message-text">
-                                                                <p style="overflow-wrap:anywhere;">${urlify(data['body'])}</p>
+                                                                <p style="overflow-wrap:anywhere;">${data['body']}</p>
                                                             </div>
                                                             ` :
                                                             `
@@ -377,7 +377,7 @@
                                                     ${data['body'] ? 
                                                             `
                                                             <div class="message-text">
-                                                                <p style="overflow-wrap:anywhere;">${urlify(data['body'])}</p>
+                                                                <p style="overflow-wrap:anywhere;">${data['body']}</p>
                                                             </div>
                                                             ` :
                                                             `
@@ -498,7 +498,7 @@
                                                     ${data['body'] ? 
                                                             `
                                                             <div class="message-text">
-                                                                <p style="overflow-wrap:anywhere;">${urlify(data['body'])}</p>
+                                                                <p style="overflow-wrap:anywhere;">${data['body']}</p>
                                                             </div>
                                                             ` :
                                                             `
@@ -565,7 +565,7 @@
                                                     ${data['body'] ? 
                                                         `
                                                         <div class="message-text">
-                                                            <p style="overflow-wrap:anywhere;">${urlify(data['body'])}</p>
+                                                            <p style="overflow-wrap:anywhere;">${data['body']}</p>
                                                         </div>
                                                         ` :
                                                         `
@@ -618,8 +618,13 @@
 
         let group_chatSocket_chat_{{ group.id }};
         let receiver_group_{{group.id }} = "{{group.id }}";
+        let wsStart = 'ws://';
+
+    if(loc.protocol === 'https:'){
+        wsStart = 'wss://';
+    }
         group_chatSocket_chat_{{ group.id }} = new ReconnectingWebSocket(
-            'ws://' + window.location.host +
+            wsStart + window.location.host +
             '/ws/chat/group/' + "{{ group.name }}" + '/'+ "{{ request.user.id }}" +'/');
 
         group_websocket_dict["group_chatSocket_chat_{{ group.name }}"] = group_chatSocket_chat_{{ group.id }};
