--- a/post/templates/post/skeleton_feed.html
+++ b/post/templates/post/skeleton_feed.html
@@ -483,15 +483,15 @@
                                         <ul class="submenu" style="display: block;">
                                         {% for second_category in item.firstCat.all %}
                                             <li class="">
-                                                <a class="filter-option" id="second-cat-{{item.id}}" onclick="setSecondLevelFilter('{{ second_category.id }}', 'second-cat-{{ item.id }}')" style="font-weight: 500;color: #039be5;">{{ second_category.name }}</a>
+                                                <a class="filter-option" id="second-cat-{{second_category.id}}" onclick="setSecondLevelFilter('{{ second_category.id }}', 'second-cat-{{ second_category.id }}')" style="font-weight: 500;color: #039be5;">{{ second_category.name }}</a>
                                                 <ul class="" style="display: block;padding-left: 20px;">
                                                     {% for third_category in second_category.firstCatThird.all %}
                                                     <li class="">
-                                                        <a class="filter-option" id="third-cat-{{ item.id }}" onclick="setThirdLevelFilter('{{ third_category.id }}', 'third-cat-{{ item.id }}')" style="font-weight: 500;" >{{ third_category.name }}</a>
+                                                        <a class="filter-option" id="third-cat-{{ third_category.id }}" onclick="setThirdLevelFilter('{{ third_category.id }}', 'third-cat-{{ third_category.id }}')" style="font-weight: 500;" >{{ third_category.name }}</a>
                                                         <ul class="" style="display: block;padding-left: 20px;">
                                                             {% for fourth_category in third_category.firstCatFourth.all %}
                                                             <li class="">
-                                                                <a class="filter-option" id="fourth-cat-{{ item.id }}" onclick="setFourthLevelFilter('{{ fourth_category.id }}', 'fourth-cat-{{ item.id }}')">{{ fourth_category.name }}</a>
+                                                                <a class="filter-option" id="fourth-cat-{{ fourth_category.id }}" onclick="setFourthLevelFilter('{{ fourth_category.id }}', 'fourth-cat-{{ fourth_category.id }}')">{{ fourth_category.name }}</a>
                                                             </li>
                                                             {% endfor %}
                                                         </ul>
