--- a/chat/templates/chat/chat-js.html
+++ b/chat/templates/chat/chat-js.html
@@ -543,8 +543,8 @@ function getMessageById(data) {
     {% for item in chat_list_user %}
         let chatSocket_chat_{{ item.id }};
         let receiver_{{ item.id }} = "{{ item.id }}";
-        let loc = window.location;
-    let wsStart = 'ws://';
+        loc = window.location;
+    wsStart = 'ws://';
 
     if(loc.protocol === 'https:'){
         wsStart = 'wss://';
