--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -2,14 +2,18 @@
 {% load static %}
 {% block content %}
 
+<style>
+    
+</style>
+
 <!-- Content -->
 <div class="page-content">
     <!-- inner page banner -->
-    <div class="dlab-bnr-inr" style="background-image:url('{% static 'images/background/bg1.jpg' %}'); background-size: cover; background-position: top center; background-repeat: no-repeat;">
+        <div class="dlab-bnr-inr bg-custom" style="background-image:url('{% static 'images/background/bg1.jpg' %}');">
         <div class="container">
             <div class="dlab-bnr-inr-entry text-white">
                 <h1>Our Plans</h1>
-                <!-- <p>We help companies we believe in get results. Let us show you how</p> -->
+                <p>Access more features with subscription</p>
             </div>
         </div>
     </div>
