--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -6,7 +6,7 @@
 <!-- Content -->
 <div class="page-content">
     <!-- inner page banner -->
-    <div class="dlab-bnr-inr" style="background-image:url('{% static 'images/background/bg1.jpg' %}'); background-size: cover; background-position: top center; background-repeat: no-repeat;">
+    <div class="dlab-bnr-inr bg-custom" style="background-image:url('{% static 'images/background/bg1.jpg' %}');">
         <div class="container">
             <div class="dlab-bnr-inr-entry text-white">
                 <h1>Contact Us</h1>
@@ -71,7 +71,7 @@
                             </div>
                             <div class="icon-content">
                                 <h4 class="dlab-tilte m-b5">Email address</h4>
-                                <p>Supportstore@msimple.net <br/> Info@Simplenet.net</p>
+                                <p>info@stellar-ai.in</p>
                             </div>
                         </div>
                     </div>
@@ -84,19 +84,19 @@
                             </div>
                             <div class="icon-content">
                                 <h4 class="dlab-tilte m-b5">Office Location</h4>
-                                <p>62 Arlington St. Suite 100 Boston, CA 01117, USA</p>
+                                <p>Mumbai</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 m-b30 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="contact-details">
-                            <h2 class="text-secondry">Quick Support?</h2>
+                            <!-- <h2 class="text-secondry">Quick Support?</h2>
                             <div class="contact-user">
                                 <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=580&q=80" alt="">
                                 <h5>Mahfuz Riad</h5>
-                            </div>
+                            </div> -->
                             <p>Want to get instant support ? Type away below.Schedule a short introductory call </p>
-                            <span class="email-text">Contact @example.com</span>
+                            <span class="email-text">Contact: info@stellar-ai.in</span>
                         </div>
                     </div>
                 </div>
